--- a/app/index.html
+++ b/app/index.html
@@ -2,13 +2,15 @@
 <html lang="zh">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui">
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui">
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
 </head>
 
 <body>
+  <div id="app">
 </body>
+
 </html>
